[package]
name = "hrtf"
version = "0.5.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2018"
license = "MIT"
description = "HRTF (Head-Related Transfer Function) audio signal processor"
keywords = ["sound", "hrtf", "binaural"]
repository = "https://github.com/mrDIMAS/hrtf"
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md", "/examples/*"]
documentation = "https://docs.rs/hrtf"
readme = "README.md"

[dependencies]
rustfft = "5.0.1"
byteorder = "1.3.4"
rubato = "0.5.0"